# meshcat-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: apt-ci.yaml  conda-forge-ci.yml
cmake/: FetchuWebSockets.cmake  FindCPPZMQ.cmake  FindZeroMQ.cmake  MeshcatCppDeps.cmake
examples/: CMakeLists.txt  meshcat_example.cpp
examples/misc/: Dragonite.stl  LICENSE_DRAGONITE_STL
include/MeshcatCpp/: Material.h  MatrixView.h  Meshcat.h  Property.h  Shape.h
include/MeshcatCpp/impl/: FindResource.h  MsgpackTypes.h  TreeNode.h  UUIDGenerator.h
src/: FindResource.cpp.in  Material.cpp  Meshcat.cpp  MsgpackTypes.cpp  Shape.cpp  UUIDGenerator.cpp  main.cpp
test/: meshcat_test.cpp
